<resources>
    <string name="app_name">Lycée Pape Clément</string>
    <string name="title_activity_students">StudentsActivity</string>
    <string name="home_highschool_title">Le Lycée</string>
    <string name="home_highschool_description">Toutes les informations sur votre établissement.</string>
    <string name="home_students_title">Élèves</string>
    <string name="home_students_description">Section destinée aux élèves.</string>
    <string name="home_parents_title">Parents</string>
    <string name="home_parents_description">Section destinée aux parents.</string>

    <string name="parent_header">Activité</string>
    <string name="cdi_header">Actualité</string>
    <string name="cvl_header">Actualité</string>
    <string name="infos_header">Actualité</string>

    <string name="cdi_activity_title">Le CDI</string>
    <string name="cvl_activity_title">Le CVL</string>
    <string name="infos_activity_title">Les Informations</string>
    <string name="contact_activity_title">Coordonnées</string>
    <string name="orientation_activity_title">Orientation</string>
    <string name="parents_activity_title">Parents</string>
    <string name="high_school_activity_title">Le Lycée</string>
    <string name="students_activity_title">StudentsActivity</string>
    <string name="students_title_class">Choisissez votre classe :</string>
    <string name="students_monday">Lundi</string>
    <string name="students_tuesday">Mardi</string>
    <string name="students_wednesday">Mercredi</string>
    <string name="students_thursday">Jeudi</string>
    <string name="students_friday">Vendredi</string>
</resources>
