<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:paddingTop="0dp"
    android:paddingRight="4dp"
    android:paddingBottom="20dp"
    tools:context=".HighSchoolActivity"
    android:background="@color/high_school_primary">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/high_school_secondary"
        android:id="@+id/high_school_header"/>

    <LinearLayout
        android:layout_below="@+id/high_school_header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/high_school_bg">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/ll_highschool_cdi"
            android:background="@color/high_school_bg_elements"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/cdi_primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cdi_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/iconcdi"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:text="@string/cdi_activity_title"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/flechebase"
                    android:id="@+id/iv_highschool_fleche_cdi" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:layout_gravity="end"
                android:text="Dernière nouvelle : "
                android:textSize="8dp"
                android:id="@+id/tv_highschool_cdi"
                android:layout_marginRight="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/ll_highschool_cvl"
            android:background="@color/high_school_bg_elements"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/cvl_primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cvl_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/iconcvl"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:text="@string/cvl_activity_title"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/flechebase"
                    android:id="@+id/iv_highschool_fleche_cvl" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:layout_gravity="end"
                android:text="Dernière nouvelle : "
                android:textSize="8dp"
                android:id="@+id/tv_highschool_cvl"
                android:layout_marginRight="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/ll_highschool_contact"
            android:background="@color/high_school_bg_elements"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/contact_primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/contact_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/iconcoo"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:text="@string/contact_activity_title"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/flechebase"
                    android:id="@+id/iv_highschool_fleche_contact" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/ll_highschool_orientation"
            android:background="@color/high_school_bg_elements"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/orientation_primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/orientation_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/iconorien"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:text="@string/orientation_activity_title"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/flechebase"
                    android:id="@+id/iv_highschool_fleche_orientation" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/ll_highschool_infos"
            android:background="@color/high_school_bg_elements"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/infos_primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/infos_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/iconinfos"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:text="@string/infos_activity_title"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/flechebase"
                    android:id="@+id/iv_highschool_fleche_infos" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:layout_gravity="end"
                android:text="Dernière nouvelle : "
                android:textSize="8dp"
                android:id="@+id/tv_highschool_infos"
                android:layout_marginRight="2dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/high_school_secondary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>